<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="6dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textColor="@color/black"
    />

    <LinearLayout
        android:id="@+id/addElementLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        android:paddingVertical="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:elevation="10dp"
    >
        <EditText
            android:id="@+id/etNewElement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/newElementHint"
        />

        <Button
            android:id="@+id/btnNewElement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newElementBtn"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/elementListLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/addElementLayout"
        app:layout_constraintBottom_toTopOf="@+id/btnClearList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/tvElementList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:text="@string/elementListTitle"
            android:textStyle="italic|bold"
            android:textSize="16sp"
        />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvElementList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"
            android:layout_weight="0.1"
            android:maxHeight="200dp"
            android:overScrollMode="always"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/tvElementList" />
    </LinearLayout>

    <Button
        android:id="@+id/btnClearList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/clearListBtn"
    />

</androidx.constraintlayout.widget.ConstraintLayout>